fix: Remove justify text align

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -609,16 +609,11 @@ body {
   
   p {
     margin-bottom: 15px;
-    text-align: justify;
   }
 }
 
 .post-content {
-  
-  p {
-    text-align: justify;
-  }
-  
+    
   img {
     display: block;
     margin-top: 20px;
